// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchModal should not render if not open 1`] = `<DocumentFragment />`;

exports[`SearchModal should render a modal 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-30 bg-black opacity-50"
    data-testid="modal__overlay"
  />
  <div
    class="sc-AxiKw cTRlJa absolute left-0 right-0 top-0 z-30 flex flex-col px-12 pt-6 pb-8 mx-auto mt-24 overflow-hidden rounded-xl bg-theme-background"
    data-testid="modal__inner"
  >
    <div
      class="absolute top-0 right-0 mt-4 mr-4 z-10"
    >
      <button
        class="sc-AxjAm bThAoP"
        color="neutral"
        data-testid="modal__close-btn"
        type="button"
      >
        <div
          class="sc-AxirZ fttODj"
          height="10"
          width="10"
        >
          <svg>
            cross-slim.svg
          </svg>
        </div>
      </button>
    </div>
    <div
      class="py-4"
    >
      <h2>
        Search
      </h2>
      <div
        class="flex-1 "
      >
        <div
          class="text-theme-neutral-700"
        >
          Quickly find the right answers to any questions
        </div>
        <div
          class="-mx-12"
        >
          <div
            class="bg-theme-neutral-100 px-12 pt-8 pb-10 mt-8"
            data-testid="SearchBar"
          >
            <div
              class="flex px-6 py-4 bg-white rounded shadow-xl"
            >
              <div
                class="flex items-center pl-2 pr-6 my-1 border-r border-theme-neutral-200"
                data-testid="SearchBarOptions"
              >
                <div
                  class="relative"
                  data-testid="dropdown__toggle"
                >
                  <span
                    class="font-semibold cursor-pointer select-none"
                  >
                    All
                    <svg
                      class="inline-block w-2 ml-2 text-black"
                    >
                      arrowdown.svg
                    </svg>
                  </span>
                </div>
              </div>
              <div
                class="flex-1 mr-4"
              >
                <input
                  class="sc-AxhUy fvuHTn overflow-hidden shadow-sm w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 py-3 px-4 text-theme-neutral-900 transition-colors duration-200 focus:outline-none focus:border-theme-primary border-none shadow-none"
                  data-testid="Input"
                  placeholder="What would you like to search for?"
                />
              </div>
              <button
                class="sc-AxjAm cCtLft my-1"
                color="primary"
                type="button"
              >
                <span
                  class="px-2 text-sm"
                >
                  Find it
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="mt-8"
        >
          <div
            class="sc-AxhCb bybrRt"
            role="table"
          >
            <table
              class="table-auto"
            >
              <thead>
                <tr
                  role="row"
                >
                  <th
                    class="text-xs text-left select-none text-theme-neutral-400"
                    colspan="1"
                    data-testid="table__th--0"
                    role="columnheader"
                    style="cursor: pointer;"
                    title="Toggle SortBy"
                  >
                    <div
                      class="flex flex-inline align-top  undefined"
                    >
                      <div
                        class="mr-1"
                      >
                        Title
                      </div>
                      <div
                        class="mt-1 text-theme-color-neutral-500"
                        data-testid="table__Sort"
                      >
                        <div
                          class="sc-AxirZ fttODj"
                          height="10"
                          width="10"
                        >
                          <svg>
                            sort.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-xs text-left select-none text-theme-neutral-400"
                    colspan="1"
                    data-testid="table__th--1"
                    role="columnheader"
                    style="cursor: pointer;"
                    title="Toggle SortBy"
                  >
                    <div
                      class="flex flex-inline align-top  undefined"
                    >
                      <div
                        class="mr-1"
                      >
                        Category
                      </div>
                      <div
                        class="mt-1 text-theme-color-neutral-500"
                        data-testid="table__Sort"
                      >
                        <div
                          class="sc-AxirZ fttODj"
                          height="10"
                          width="10"
                        >
                          <svg>
                            sort.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </th>
                </tr>
              </thead>
              <tbody
                role="rowgroup"
              >
                <tr
                  class="border-b border-theme-neutral-200"
                >
                  <td
                    class="py-4 pr-8"
                  >
                    <div
                      class="font-semibold"
                    >
                      How do I install the plugin?
                    </div>
                    <div
                      class="mt-2 text-sm text-theme-neutral-700"
                    >
                      ARK Core is written in TypeScript, and it has been using Lerna to manage the development and publication of its packages and uses Node.js as the bla bla bla
                    </div>
                  </td>
                  <td
                    class="py-4 text-sm text-right align-top"
                  >
                    <div>
                      Plugin
                    </div>
                  </td>
                </tr>
                <tr
                  class="border-b border-theme-neutral-200"
                >
                  <td
                    class="py-4 pr-8"
                  >
                    <div
                      class="font-semibold"
                    >
                      Installing the side plugin
                    </div>
                    <div
                      class="mt-2 text-sm text-theme-neutral-700"
                    >
                      ARK Core is written in TypeScript, and it has been using Lerna to manage the development and publication of its packages and uses Node.js as the bla bla bla
                    </div>
                  </td>
                  <td
                    class="py-4 text-sm text-right align-top"
                  >
                    <div>
                      Plugin
                    </div>
                  </td>
                </tr>
                <tr
                  class="border-b border-theme-neutral-200"
                >
                  <td
                    class="py-4 pr-8"
                  >
                    <div
                      class="font-semibold"
                    >
                      If the plugin is not installed, what do we do?
                    </div>
                    <div
                      class="mt-2 text-sm text-theme-neutral-700"
                    >
                      ARK Core is written in TypeScript, and it has been using Lerna to manage the development and publication of its packages and uses Node.js as the bla bla bla
                    </div>
                  </td>
                  <td
                    class="py-4 text-sm text-right align-top"
                  >
                    <div>
                      Plugin
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchModal should render a modal 2`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-30 bg-black opacity-50"
    data-testid="modal__overlay"
  />
  <div
    class="sc-AxiKw cTRlJa absolute left-0 right-0 top-0 z-30 flex flex-col px-12 pt-6 pb-8 mx-auto mt-24 overflow-hidden rounded-xl bg-theme-background"
    data-testid="modal__inner"
  >
    <div
      class="absolute top-0 right-0 mt-4 mr-4 z-10"
    >
      <button
        class="sc-AxjAm bThAoP"
        color="neutral"
        data-testid="modal__close-btn"
        type="button"
      >
        <div
          class="sc-AxirZ fttODj"
          height="10"
          width="10"
        >
          <svg>
            cross-slim.svg
          </svg>
        </div>
      </button>
    </div>
    <div
      class="py-4"
    >
      <h2>
        Search
      </h2>
      <div
        class="flex-1 "
      >
        <div
          class="text-theme-neutral-700"
        >
          Quickly find the right answers to any questions
        </div>
        <div
          class="-mx-12"
        >
          <div
            class="bg-theme-neutral-100 px-12 pt-8 pb-10 mt-8"
            data-testid="SearchBar"
          >
            <div
              class="flex px-6 py-4 bg-white rounded shadow-xl"
            >
              <div
                class="flex items-center pl-2 pr-6 my-1 border-r border-theme-neutral-200"
                data-testid="SearchBarOptions"
              >
                <div
                  class="relative"
                  data-testid="dropdown__toggle"
                >
                  <span
                    class="font-semibold cursor-pointer select-none"
                  >
                    Delegate
                    <svg
                      class="inline-block w-2 ml-2 text-black"
                    >
                      arrowdown.svg
                    </svg>
                  </span>
                </div>
              </div>
              <div
                class="flex-1 mr-4"
              >
                <input
                  class="sc-AxhUy fvuHTn overflow-hidden shadow-sm w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 py-3 px-4 text-theme-neutral-900 transition-colors duration-200 focus:outline-none focus:border-theme-primary border-none shadow-none"
                  data-testid="Input"
                  placeholder="What would you like to search for?"
                />
              </div>
              <button
                class="sc-AxjAm cCtLft my-1"
                color="primary"
                type="button"
              >
                <span
                  class="px-2 text-sm"
                >
                  Find it
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="mt-8"
        >
          <div
            class="sc-AxhCb bybrRt"
            role="table"
          >
            <table
              class="table-auto"
            >
              <thead>
                <tr
                  role="row"
                >
                  <th
                    class="text-xs text-left select-none text-theme-neutral-400"
                    colspan="1"
                    data-testid="table__th--0"
                    role="columnheader"
                    style="cursor: pointer;"
                    title="Toggle SortBy"
                  >
                    <div
                      class="flex flex-inline align-top  undefined"
                    >
                      <div
                        class="mr-1"
                      >
                        Title
                      </div>
                      <div
                        class="mt-1 text-theme-color-neutral-500"
                        data-testid="table__Sort"
                      >
                        <div
                          class="sc-AxirZ fttODj"
                          height="10"
                          width="10"
                        >
                          <svg>
                            sort.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-xs text-left select-none text-theme-neutral-400"
                    colspan="1"
                    data-testid="table__th--1"
                    role="columnheader"
                    style="cursor: pointer;"
                    title="Toggle SortBy"
                  >
                    <div
                      class="flex flex-inline align-top  undefined"
                    >
                      <div
                        class="mr-1"
                      >
                        Category
                      </div>
                      <div
                        class="mt-1 text-theme-color-neutral-500"
                        data-testid="table__Sort"
                      >
                        <div
                          class="sc-AxirZ fttODj"
                          height="10"
                          width="10"
                        >
                          <svg>
                            sort.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </th>
                </tr>
              </thead>
              <tbody
                role="rowgroup"
              >
                <tr
                  class="border-b border-theme-neutral-200"
                >
                  <td
                    class="py-4 pr-8"
                  >
                    <div
                      class="font-semibold"
                    >
                      How do I install the plugin?
                    </div>
                    <div
                      class="mt-2 text-sm text-theme-neutral-700"
                    >
                      ARK Core is written in TypeScript, and it has been using Lerna to manage the development and publication of its packages and uses Node.js as the bla bla bla
                    </div>
                  </td>
                  <td
                    class="py-4 text-sm text-right align-top"
                  >
                    <div>
                      Plugin
                    </div>
                  </td>
                </tr>
                <tr
                  class="border-b border-theme-neutral-200"
                >
                  <td
                    class="py-4 pr-8"
                  >
                    <div
                      class="font-semibold"
                    >
                      Installing the side plugin
                    </div>
                    <div
                      class="mt-2 text-sm text-theme-neutral-700"
                    >
                      ARK Core is written in TypeScript, and it has been using Lerna to manage the development and publication of its packages and uses Node.js as the bla bla bla
                    </div>
                  </td>
                  <td
                    class="py-4 text-sm text-right align-top"
                  >
                    <div>
                      Plugin
                    </div>
                  </td>
                </tr>
                <tr
                  class="border-b border-theme-neutral-200"
                >
                  <td
                    class="py-4 pr-8"
                  >
                    <div
                      class="font-semibold"
                    >
                      If the plugin is not installed, what do we do?
                    </div>
                    <div
                      class="mt-2 text-sm text-theme-neutral-700"
                    >
                      ARK Core is written in TypeScript, and it has been using Lerna to manage the development and publication of its packages and uses Node.js as the bla bla bla
                    </div>
                  </td>
                  <td
                    class="py-4 text-sm text-right align-top"
                  >
                    <div>
                      Plugin
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
